derive-ex-tests/tests/compile_fail/compare_op/eq_with_hash_key.rs
use derive_ex::derive_ex;

#[derive_ex(Hash, Eq, PartialEq)]
struct X(#[hash(key = $.len())] String);

fn main() {}
